--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
   margin: 0;
+  /* position: relative; */
   
   width: 100%;
   min-height: 100vh;
