--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+  position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Manrope', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -40,6 +41,8 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
+  position: relative;
+  
 }
 
 code {
